--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -47,10 +47,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DB\Session.cs" />
-    <Compile Include="Models\Story.cs" />
+    <Compile Include="Models\Joke.cs" />
     <Compile Include="Models\StoryType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\StoryViewer.cs" />
+    <Compile Include="Services\JokeViewer.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
