--- a/SolidJokes/Web.config
+++ b/SolidJokes/Web.config
@@ -11,8 +11,11 @@
   <!--<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SolidJokes-20140909062148.mdf;Initial Catalog=aspnet-SolidJokes-20140909062148;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="Funny" providerName="System.Data.SqlClient" connectionString="server=(localdb)\Projects;database=Funny;integrated security=true" />
+  </connectionStrings>-->
+  <connectionStrings>
+    <add name="Funny" providerName="System.Data.SqlClient" connectionString="server=.\;database=Funny;integrated security=true" />
   </connectionStrings>
 
   <appSettings>
