--- a/SolidJokes.Tests/Tests.csproj
+++ b/SolidJokes.Tests/Tests.csproj
@@ -34,11 +34,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -76,8 +80,10 @@
   <ItemGroup>
     <Compile Include="Fakes\FakeJokeViewer.cs" />
     <Compile Include="Fakes\FakeSession.cs" />
-    <Compile Include="JokeViewerTests.cs" />
-    <Compile Include="HomeControllerTests.cs" />
+    <Compile Include="Integration\Display\ChangeSortOrderToRating.cs" />
+    <Compile Include="Integration\IntegrationTestBaseWithData.cs" />
+    <Compile Include="Unit\JokeViewerTests.cs" />
+    <Compile Include="Unit\HomeControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Fakes\TestDbSet.cs" />
   </ItemGroup>
@@ -95,6 +101,9 @@
       <Project>{0932242b-2b46-410f-aad1-5efb61565129}</Project>
       <Name>Web</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
