Added in JokeViewerLogger to decorate the JokeViewer and to log when it is called.

--- a/SolidJokes/Web.csproj
+++ b/SolidJokes/Web.csproj
@@ -165,7 +165,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="HomeControllerLogger.cs" />
+    <Compile Include="Controllers\HomeControllerLogger.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
