--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Models\JokeType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\JokeViewer.cs" />
+    <Compile Include="Services\JokeViewerLogger.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
