--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C15CDE0E-E3DB-4A8D-8770-2E1DA99A1127}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Core</RootNamespace>
-    <AssemblyName>Core</AssemblyName>
+    <RootNamespace>SolidJokes.Core</RootNamespace>
+    <AssemblyName>SolidJokes.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
