--- a/SolidJokes.Tests/Tests.csproj
+++ b/SolidJokes.Tests/Tests.csproj
@@ -89,16 +89,18 @@
     <Compile Include="Fakes\TestDbSet.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj">
+    <ProjectReference Include="..\SolidJokes.Core\Core.csproj">
       <Project>{C15CDE0E-E3DB-4A8D-8770-2E1DA99A1127}</Project>
       <Name>Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SolidJokes\Web.csproj">
+    <ProjectReference Include="..\SolidJokes.Web\Web.csproj">
       <Project>{0932242b-2b46-410f-aad1-5efb61565129}</Project>
       <Name>Web</Name>
     </ProjectReference>
