--- a/SolidJokes.Tests/Tests.csproj
+++ b/SolidJokes.Tests/Tests.csproj
@@ -92,7 +92,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="ClassDiagram1.cd" />
+    <None Include="Diagrams\JokeViewerSlice.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
