Added in JokeVoter and Vote.  Put in a FakeJokeVoter for unit tests but not implemented yet.

--- a/SolidJokes.Tests/Tests.csproj
+++ b/SolidJokes.Tests/Tests.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Fakes\FakeJokeViewer.cs" />
+    <Compile Include="Fakes\FakeJokeVoter.cs" />
     <Compile Include="Fakes\FakeSession.cs" />
     <Compile Include="Integration\Display\ChangeSortOrderToNewestFirst.cs" />
     <Compile Include="Integration\Display\ChangeSortOrderToRating.cs" />
