--- a/SolidJokes.Core/Core.csproj
+++ b/SolidJokes.Core/Core.csproj
@@ -49,9 +49,11 @@
     <Compile Include="DB\Session.cs" />
     <Compile Include="Models\Joke.cs" />
     <Compile Include="Models\JokeType.cs" />
+    <Compile Include="Models\Vote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\JokeViewer.cs" />
     <Compile Include="Services\JokeViewerLogger.cs" />
+    <Compile Include="Services\JokeVoter.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
