--- a/SolidJokes.Tests/Tests.csproj
+++ b/SolidJokes.Tests/Tests.csproj
@@ -85,7 +85,9 @@
     <Compile Include="Integration\CoreServices\ChangeSortOrderToNewestFirst.cs" />
     <Compile Include="Integration\CoreServices\ChangeSortOrderToRating.cs" />
     <Compile Include="Integration\CoreServices\VoteForAJoke.cs" />
+    <Compile Include="Integration\CoreServices\VoteForAJokeTwice.cs" />
     <Compile Include="Integration\IntegrationTestBaseWithData.cs" />
+    <Compile Include="Integration\CoreServices\ShowAllJokes.cs" />
     <Compile Include="Integration\Web\VoteForAJokeSortOrderRemembered.cs" />
     <Compile Include="Unit\JokeViewerTests.cs" />
     <Compile Include="Unit\HomeControllerTests.cs" />
