Refactoring to have tests more BDD ie read like a spec

--- a/SolidJokes.Tests/Tests.csproj
+++ b/SolidJokes.Tests/Tests.csproj
@@ -82,13 +82,13 @@
     <Compile Include="Fakes\FakeJokeViewer.cs" />
     <Compile Include="Fakes\FakeJokeVoter.cs" />
     <Compile Include="Fakes\FakeSession.cs" />
-    <Compile Include="Integration\CoreServices\ChangeSortOrderToNewestFirst.cs" />
-    <Compile Include="Integration\CoreServices\ChangeSortOrderToRating.cs" />
-    <Compile Include="Integration\CoreServices\VoteForAJoke.cs" />
-    <Compile Include="Integration\CoreServices\VoteForAJokeTwice.cs" />
+    <Compile Include="Integration\Display\ChangeSortOrderToNewestFirst.cs" />
+    <Compile Include="Integration\Display\ChangeSortOrderToRating.cs" />
+    <Compile Include="Integration\Display\VoteForAJoke.cs" />
+    <Compile Include="Integration\Display\VoteForAJokeTwice.cs" />
     <Compile Include="Integration\IntegrationTestBaseWithData.cs" />
-    <Compile Include="Integration\CoreServices\ShowAllJokes.cs" />
-    <Compile Include="Integration\Web\VoteForAJokeSortOrderRemembered.cs" />
+    <Compile Include="Integration\Display\VisitHomepage.cs" />
+    <Compile Include="Integration\Display\VoteForAJokeSortOrderRemembered.cs" />
     <Compile Include="Unit\JokeViewerTests.cs" />
     <Compile Include="Unit\HomeControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
