Adding in JokeController and index for it.  Can display Jokes for edit and create now using DI.

--- a/SolidJokes.Tests/Tests.csproj
+++ b/SolidJokes.Tests/Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Fakes\FakeSession.cs" />
     <Compile Include="Integration\Display\ChangeSortOrderToNewestFirst.cs" />
     <Compile Include="Integration\Display\ChangeSortOrderToRating.cs" />
+    <Compile Include="Integration\Display\ShowAdminTitleInMenu.cs" />
     <Compile Include="Integration\Display\VoteForAJoke.cs" />
     <Compile Include="Integration\Display\VoteForAJokeTwice.cs" />
     <Compile Include="Integration\IntegrationTestBaseWithData.cs" />
@@ -115,7 +116,9 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Integration\Creation\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
