Added in an Edit screen for Jokes with the Get coming from JokeViewer Service

--- a/SolidJokes.Tests/Tests.csproj
+++ b/SolidJokes.Tests/Tests.csproj
@@ -99,6 +99,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Diagrams\JokeCRUD.cd" />
     <None Include="Diagrams\JokeViewerSlice.cd" />
     <None Include="Diagrams\JokeVoterSlice.cd" />
     <None Include="packages.config" />
