--- a/SolidJokes.Web/Web.csproj
+++ b/SolidJokes.Web/Web.csproj
@@ -234,6 +234,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Joke\Index.cshtml" />
     <Content Include="Views\Joke\Edit.cshtml" />
+    <Content Include="Views\Joke\_CreateOrEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
