--- a/SolidJokes.Web/Web.csproj
+++ b/SolidJokes.Web/Web.csproj
@@ -236,6 +236,7 @@
     <Content Include="Views\Joke\Edit.cshtml" />
     <Content Include="Views\Joke\_CreateOrEdit.cshtml" />
     <Content Include="Views\Joke\Create.cshtml" />
+    <Content Include="Views\Joke\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
