Added integration tests in

--- a/SolidJokes.Tests/Tests.csproj
+++ b/SolidJokes.Tests/Tests.csproj
@@ -82,6 +82,11 @@
     <Compile Include="Fakes\FakeJokeViewer.cs" />
     <Compile Include="Fakes\FakeJokeVoter.cs" />
     <Compile Include="Fakes\FakeSession.cs" />
+    <Compile Include="Integration\Creation\EditJokeReveived.cs" />
+    <Compile Include="Integration\Creation\EmptyTitle.cs" />
+    <Compile Include="Integration\Creation\ExistingTitle.cs" />
+    <Compile Include="Integration\Creation\TitleLessThan4Chars.cs" />
+    <Compile Include="Integration\Creation\ValidJokeApplicationReceived.cs" />
     <Compile Include="Integration\Display\ChangeSortOrderToNewestFirst.cs" />
     <Compile Include="Integration\Display\ChangeSortOrderToRating.cs" />
     <Compile Include="Integration\Display\ShowAdminTitleInMenu.cs" />
@@ -89,7 +94,8 @@
     <Compile Include="Integration\Display\VoteForAJokeTwice.cs" />
     <Compile Include="Integration\IntegrationTestBaseWithData.cs" />
     <Compile Include="Integration\Display\VisitHomepage.cs" />
-    <Compile Include="Integration\Display\VoteForAJokeSortOrderRemembered.cs" />
+    <Compile Include="Integration\Display\VoteForAJokeRememberSortOrder.cs" />
+    <Compile Include="TestBase.cs" />
     <Compile Include="Unit\JokeViewerTests.cs" />
     <Compile Include="Unit\HomeControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -117,9 +123,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Integration\Creation\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
