--- a/SolidJokes.Web/Web.config
+++ b/SolidJokes.Web/Web.config
@@ -13,7 +13,8 @@
   </connectionStrings>-->
   <connectionStrings>
     <!--<add name="Funny" providerName="System.Data.SqlClient" connectionString="server=(localdb)\Projects;database=Funny;integrated security=true" />-->
-    <add name="SolidJokes" providerName="System.Data.SqlClient" connectionString="server=(localdb)\Projects;database=SolidJokes;integrated security=true" />
+    <!--<add name="SolidJokes" providerName="System.Data.SqlClient" connectionString="server=(localdb)\Projects;database=SolidJokes;integrated security=true" />-->
+    <add name="SolidJokes2" providerName="System.Data.SqlClient" connectionString="server=(localdb)\Projects;database=SolidJokes2;integrated security=true" />
 
   </connectionStrings>
   <!--<connectionStrings>
@@ -27,6 +28,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
