Added in a SQL dump file of the current jokes.  Took out the login user davemateer@gmail.com in that file.

--- a/SolidJokes.Web/Web.config
+++ b/SolidJokes.Web/Web.config
@@ -14,8 +14,8 @@
   <connectionStrings>
     <!--<add name="Funny" providerName="System.Data.SqlClient" connectionString="server=(localdb)\Projects;database=Funny;integrated security=true" />-->
     <!--<add name="SolidJokes" providerName="System.Data.SqlClient" connectionString="server=(localdb)\Projects;database=SolidJokes;integrated security=true" />-->
-    <add name="SolidJokes2" providerName="System.Data.SqlClient" connectionString="server=(localdb)\Projects;database=SolidJokes2;integrated security=true" />
-
+    <!--<add name="SolidJokes2" providerName="System.Data.SqlClient" connectionString="server=(localdb)\Projects;database=SolidJokes2;integrated security=true" />-->
+    <add name="SolidJokes" providerName="System.Data.SqlClient" connectionString="server=.\;database=SolidJokes;integrated security=true" />
   </connectionStrings>
   <!--<connectionStrings>
     <add name="Funny" providerName="System.Data.SqlClient" connectionString="server=.\;database=Funny;integrated security=true" />
