--- a/SolidJokes.Web/Web.csproj
+++ b/SolidJokes.Web/Web.csproj
@@ -183,6 +183,8 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\britishhumour2 - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\britishhumour2 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\britishhumour2.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
