--- a/SolidJokes.Web/Web.csproj
+++ b/SolidJokes.Web/Web.csproj
@@ -198,7 +198,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -240,6 +242,7 @@
     <Content Include="Views\Joke\_CreateOrEdit.cshtml" />
     <Content Include="Views\Joke\Create.cshtml" />
     <Content Include="Views\Joke\Delete.cshtml" />
+    <Content Include="Views\Home\Spotify.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
