--- a/SolidJokes.Web/Web.csproj
+++ b/SolidJokes.Web/Web.csproj
@@ -159,6 +159,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AlbumController.cs" />
     <Compile Include="Controllers\ArtistController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IHomeController.cs" />
@@ -247,6 +248,7 @@
     <Content Include="Views\Home\SpotifyArtistSearch.cshtml" />
     <Content Include="Views\Home\SpotifyAuthTestLogin.cshtml" />
     <Content Include="Views\Artist\Details.cshtml" />
+    <Content Include="Views\Album\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
