--- a/SolidJokes.Web/Web.csproj
+++ b/SolidJokes.Web/Web.csproj
@@ -249,6 +249,8 @@
     <Content Include="Views\Home\SpotifyAuthTestLogin.cshtml" />
     <Content Include="Views\Artist\Details.cshtml" />
     <Content Include="Views\Album\Details.cshtml" />
+    <Content Include="Views\Home\SpotifyCallback.cshtml" />
+    <Content Include="Views\Home\SpotifyAuthenticate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
